syntax = "proto3";

// 命 令 号: 107
// 命令名称: file_recving
// 命令描述: 回传每帧文件包
// 文件名称: s107_file_recving.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbFileRecving";

message FileRecvingRequest {
  // ATTR: REQUSET
  uint32 pack_idx = 1; //包索引号，从1开始
}

message FileRecvingResponse {
  // ATTR: REQACK
  uint32 pack_idx = 1; //包索引号，从1开始
  bytes data = 2;  //包数据内容
}
